--- a/buy_box/pubspec.yaml
+++ b/buy_box/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
+  firebase_core:
+  firebase_analytics:
+  firebase_auth:
+  cloud_firestore:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
