--- a/buy_box/pubspec.yaml
+++ b/buy_box/pubspec.yaml
@@ -29,10 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
-  firebase_core:
-  firebase_analytics:
-  firebase_auth:
-  cloud_firestore:
+  firebase_core: 0.4.5
+  firebase_analytics: 5.0.16
+  firebase_auth: 0.16.1
+  cloud_firestore: 0.13.7
 
 dev_dependencies:
   flutter_test:
