--- a/buy_box/android/app/build.gradle
+++ b/buy_box/android/app/build.gradle
@@ -34,11 +34,16 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.lucidapps.buy_box"
+        applicationId "com.lucidapps.buybox"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
+    }
+
+    dependencies {
+        implementation 'androidx.multidex:multidex:2.0.1'
     }
 
     buildTypes {
