--- a/buy_box/pubspec.yaml
+++ b/buy_box/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-
+  uuid:
   firebase_core: 0.4.5
   firebase_analytics: 5.0.16
   firebase_auth: 0.16.1
